--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -305,20 +305,6 @@
 				</data>
 			</dict>
 			<dict>
-				<key>Disabled</key>
-				<false/>
-				<key>Find</key>
-				<data>
-				TWFjLUM2RUZBNjM5NjJGQzZFQTA=
-				</data>
-				<key>Name</key>
-				<string>AirPortBrcm4360</string>
-				<key>Replace</key>
-				<data>
-				TWFjLTI3QURCQjdCNENFRThFNjE=
-				</data>
-			</dict>
-			<dict>
 				<key>Comment</key>
 				<string>Disable minStolenSize less or equal fStolenMemorySize assertion, 10.11.4 ( (based on Austere.J patch)</string>
 				<key>Disabled</key>
@@ -332,6 +318,20 @@
 				<key>Replace</key>
 				<data>
 				QTnE6yo=
+				</data>
+			</dict>
+			<dict>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				TWFjLUM2RUZBNjM5NjJGQzZFQTA=
+				</data>
+				<key>Name</key>
+				<string>AirPortBrcm4360</string>
+				<key>Replace</key>
+				<data>
+				TWFjLTI3QURCQjdCNENFRThFNjE=
 				</data>
 			</dict>
 			<dict>
@@ -365,6 +365,20 @@
 				<data>
 				AAAAAAAAAAAAAAA=
 				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Fix HDMI output</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<string>3e4d61632d423830394333373537444139424238443c2f6b65793e0a090909093c737472696e673e436f6e666967323c2f737472696e673e0a09</string>
+				<key>InfoPlistPatch</key>
+				<true/>
+				<key>Name</key>
+				<string>AppleGraphicsDevicePolicy</string>
+				<key>Replace</key>
+				<string>3e4d61632d423830394333373537444139424238443c2f6b65793e0a090909093c737472696e673e6e6f6e653c2f737472696e673e0a09090909</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
